adds README, LICENCE

--- a/AppImage/strongbox.desktop
+++ b/AppImage/strongbox.desktop
@@ -9,4 +9,4 @@ Exec=AppRun
 Terminal=false
 Categories=Game;PackageManager;Java;
 Icon=strongbox
-Keywords=warcraft;wow;world of warcraft;elvui;tukui;wowinterface;github;
+Keywords=warcraft;wow;world of warcraft;wowinterface;github;
